# HangmanGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/core/: game.cpp  game.h  sprite.cpp  sprite.h
src/game/: hud.cpp  hud.h  man.cpp  man.h  member.cpp  member.h
src/utils/: console.cpp  console.h  files.cpp  files.h
